--- a/model_analysis_4models.Rmd
+++ b/model_analysis_4models.Rmd
@@ -24,6 +24,7 @@ library(jsonlite)
 library(data.table)
 library(knitr)
 library(gridExtra)
+source('param_influence.R')
 ```
 
 
@@ -54,7 +55,7 @@ sdat.mod  <- cbind(sdat[, 1:24],
 
 #----- import model data (has to be converted from JSON to data frames)
 #--------- Integrated model original
-simsRL_LTMorig <- fromJSON('RLLTMorig_sim_data050520.JSON')
+simsRL_LTMorig <- fromJSON('./outdated_sim_data/RLLTMorig_sim_data050520.JSON')
 
  simsRL_LTMorig.set3learn <- simsRL_LTMorig$data$set3_learn %>%
   unlist() %>%
@@ -85,7 +86,7 @@ simsRL_LTMorig.s3s6test.temp <-
  
  
  #--------- Integrated model RL to LTM pipe
-simsRL_LTMpipe <- fromJSON('RLLTM2_pipe_sim_data050420.JSON')
+simsRL_LTMpipe <- fromJSON('./outdated_sim_data/RLLTM2_pipe_sim_data050420.JSON')
 
  simsRL_LTMpipe.set3learn <- simsRL_LTMpipe$data$set3_learn %>%
   unlist() %>%
@@ -110,13 +111,14 @@ simsRL_LTMpipe.s3s6test.temp <-
  RL_LTMpipe.sim.dat <- cbind(simsRL_LTMpipe.set3learn, 
                          simsRL_LTMpipe.set6learn, 
                          simsRL_LTMpipe.s3s6test.temp[1:nrow(simsRL_LTMpipe$data), ], 
-                         simsRL_LTMpipe.s3s6test.temp[244 : 486 ],
-                         simsRL_LTMpipe$data[,c('bll','alpha','egs','imag','ans')])
+                         simsRL_LTMpipe.s3s6test.temp[244 : 486, ],
+                         simsRL_LTMpipe$data[,c('bll','alpha','egs','imag','ans')]) %>% 
+   data.table()
 
  
  
  #--------- Integrated model assigned strategy
-simsRL_LTMstr <- fromJSON('RLLTM1_strategy_sim_data050420.JSON')
+simsRL_LTMstr <- fromJSON('./outdated_sim_data/RLLTM1_strategy_sim_data050420.JSON')
 
  simsRL_LTMstr.set3learn <- simsRL_LTMstr$data$set3_learn %>%
   unlist() %>%
@@ -141,14 +143,15 @@ simsRL_LTMstr.s3s6test.temp <-
  RL_LTMstr.sim.dat <- cbind(simsRL_LTMstr.set3learn, 
                          simsRL_LTMstr.set6learn, 
                          simsRL_LTMstr.s3s6test.temp[1:nrow(simsRL_LTMstr$data), ], 
-                         simsRL_LTMstr.s3s6test.temp[973 : 1944 ],
-                         simsRL_LTMstr$data[,c('bll','alpha','egs','imag','ans')])
+                         simsRL_LTMstr.s3s6test.temp[973 : 1944, ],
+                         simsRL_LTMstr$data[,c('bll','alpha','egs','imag','ans')]) %>% 
+   data.table()
  
  
 
 #--------- Reinforcement Learning Model
 
-simsRL <- fromJSON('RL_sim_data_3lvsparams_050420.JSON')
+simsRL <- fromJSON('./outdated_sim_data/RL_sim_data_3lvsparams_050420.JSON')
 
  simsRL.set3learn <- simsRL$data$set3_learn %>%
   unlist() %>%
@@ -177,11 +180,12 @@ simsRL.set6learn <- simsRL$data$set6_learn %>%
                      simsRL.set6learn, 
                      simsRL.s3s6test.temp[1:nrow(simsRL$data), ], 
                      simsRL.s3s6test.temp[10:18, ] , 
-                     simsRL$data[,c('bll','alpha','egs','imag','ans')])
+                     simsRL$data[,c('bll','alpha','egs','imag','ans')]) %>%  
+   data.table()
 
 #--------- Longterm Memory/WM/Declarative model 
  
-simsLTM    <- fromJSON('LTM_viz_sim_data_at_26.JSON')#('LTM_sim_data_3lvparams_050420.JSON') 
+simsLTM    <- fromJSON('LTM_visual_activation_allparams_evals26.JSON')#('LTM_sim_data_3lvparams_050420.JSON') 
 
  simsLTM.set3learn <- simsLTM$data$set3_learn %>%
   unlist() %>%
@@ -202,100 +206,76 @@ simsLTM.s3s6test.temp <-  simsLTM$data$set3_test %>%
    reshape(., 324, 2) %>% 
    reshape(., 54, 12) #54= nrow(sims.LTM) * 2
 
- LTM.sim.dat <- cbind('set3_learn'=simsLTM.set3learn %>% c(), 
-                      'set6_learn'=simsLTM.set6learn %>% c(),
-                      'time'=rep(1:12,324/12),
-                      'set3_test'=simsLTM.s3s6test.temp[1:27, ] %>% c(), 
-                      'set6_test'=simsLTM.s3s6test.temp[28:54, ] %>% c(), 
+ LTM.sim.dat <- cbind(simsLTM.set3learn, 
+                      simsLTM.set6learn,
+                      simsLTM.s3s6test.temp[1:27, ],
+                      simsLTM.s3s6test.temp[28:54, ],
                       simsLTM$data[,c('bll','alpha','egs','imag','ans')]) %>% 
    data.table()
  
+ # LTM.sim.dat <- cbind('set3_learn'=simsLTM.set3learn %>% c(), 
+  #                    'set6_learn'=simsLTM.set6learn %>% c(),
+   #                   'time'=rep(1:12,324/12),
+    #                  'set3_test'=simsLTM.s3s6test.temp[1:27, ] %>% c(), 
+     #                 'set6_test'=simsLTM.s3s6test.temp[28:54, ] %>% c(), 
+      #                simsLTM$data[,c('bll','alpha','egs','imag','ans')]) %>% 
+   #data.table()
  
  
  
-  yolo = LTM.sim.dat %>% 
-   .[,-c("alpha", "egs")] %>% 
-   melt.data.table(id.vars = c("ans", "bll", "imag", "time"), 
-                   variable.name = "condition")  
-  
- 
- 
- 
- 
- 
- yolo = LTM.sim.dat %>% 
-   data.frame() %>% 
-   data.table() %>% 
-   .[,-c("alpha", "egs")] %>% 
-   melt.data.table(id.vars = c("ans", "bll", "imag", "time"), 
-                   variable.name = "teddy")  
-  
- 
- 
- 
- 
-  # .[order(alpha, bll, imag)]
-   .[,`:=`(nu_var = str_trunc(variable, 2,"right", ellipsis = "") %>%
-             as.integer(), 
-           nu__cat = str_trunc(variable, 9,"left", ellipsis = ""))] %>% print()
- 
-yolo %>% 
- .[,.(avg = mean(value)), by = .(ans, bll, imag, variable)]
-
-yolo %>% 
- .[,`:=`(avg = mean(value)), by = .(ans, teddy)]
-
-yolo %>% 
-  ggplot() + 
-  geom_point(aes(time, value, color=teddy)) + 
-  facet_grid(teddy+ans~imag+bll)
-  yolo %>% .[order()]
-
- yolo %>% 
-   .[imag == 1] %>% 
-   .[ans == "0.2"] %>% 
-   .[bll == "0.4"] %>% 
-   .[teddy == "set3_learn"]
-
- 
- #TODO
-
 ```
 
-```{r model description plots}
+```{r model description analysis and plots}
 
 #------Descriptive measures: learning rate (beta), accuracy learn & Test, differences between learn3 and learn 6
 #--------select data for each level of parameters per model
+RL.params        <- param.influence(RL.sim.dat, 'RL')
+RLLTMpipe.params <- param.influence(RL_LTMpipe.sim.dat, 'RLLTM')
+RLLTMstr.params  <- param.influence(RL_LTMstr.sim.dat, 'RLLTM')
+LTM.params       <- param.influence(LTM.sim.dat, 'LTM')
+
+tmp.color = c('#ca0020','#f4a582' ,'#0571b0','#92c5de')
 
 
 
+RL.params %>% 
+  melt(value.name = 'accuracy',id.vars=c('parameter','level')) %>% 
+  ggplot(aes(level, accuracy, color=variable)) + 
+  geom_point()+
+  geom_line() +
+  facet_grid('parameter')+
+  theme_bw(base_size = 16, base_line_size = 1)+
+   scale_color_manual(values = tmp.color)
+   #scale_colour_brewer( palette = "RdBu", direction = 1) 
 
 
+LTM.params %>% 
+  melt(value.name = 'accuracy',id.vars=c('parameter','level')) %>% 
+  ggplot(aes(level, accuracy, color=variable)) + 
+  geom_point()+
+  geom_line() +
+  facet_grid('parameter')+
+  theme_bw(base_size = 16, base_line_size = 1)+
+   scale_color_manual(values = tmp.color)
 
 
+RLLTMpipe.params %>% 
+  melt(value.name = 'accuracy',id.vars=c('parameter','level')) %>% 
+  ggplot(aes(level, accuracy, color=variable)) + 
+  geom_point()+
+  geom_line() +
+  facet_grid('parameter')+
+  theme_bw(base_size = 16, base_line_size = 1)+
+   scale_color_manual(values = tmp.color)
 
-
-function_name <- function(arg_1, arg_2, ...) {
-  
-bll_param   = c(0.4, 0.5, 0.6)
-alpha_param = c(0.1, 0.15, 0.2)
-egs_param   = c(0.2, 0.3, 0.4)
-imag_param  = c(1, 2, 3)
-ans_param   = c(0.2, 0.3, 0.4)
-  
-  
-            temp <- simsRL$data
-            ind  <- (temp$alpha    == input$al & 
-                         temp$bll  == 0 &  
-                         temp$ans  == 0 &
-                         temp$egs  == input$e & 
-                         temp$imag == 0)
-
-  }
-
-
-
-#
+RLLTMstr.params %>% 
+  melt(value.name = 'accuracy',id.vars=c('parameter','level')) %>% 
+  ggplot(aes(level, accuracy, color=variable)) + 
+  geom_point()+
+  geom_line() +
+  facet_grid('parameter')+
+  theme_bw(base_size = 16, base_line_size = 1)+
+   scale_color_manual(values = tmp.color)
 
 
 
@@ -313,19 +293,19 @@ mseRL_LTMstr.temp  =c()
 
 for(s in c(1:nrow(sdat.mod))) { # for each subject
  # model 1 
- mseRL.temp     <- rbind(mseRL.temp, apply(RL.sim.dat, 1, function(x,y) MSE(x, sdat.mod[s, ])))
+ mseRL.temp     <- rbind(mseRL.temp, apply(RL.sim.dat[, 1:48], 1, function(x,y) MSE(x, sdat.mod[s, ])))
  # model 2
- mseLTM.temp    <- rbind(mseLTM.temp, apply(LTM.sim.dat, 1, function(x,y) MSE(x, sdat.mod[s, ] )))
+ mseLTM.temp    <- rbind(mseLTM.temp, apply(LTM.sim.dat[, 1:48], 1, function(x,y) MSE(x, sdat.mod[s, ] )))
  
  # model 3
  mseRL_LTMorig.temp <- rbind(mseRL_LTMorig.temp, 
-                             apply(RL_LTMorig.sim.dat, 1, function(x,y) MSE(x, sdat.mod[s, ])))
+                             apply(RL_LTMorig.sim.dat[, 1:48], 1, function(x,y) MSE(x, sdat.mod[s, ])))
  # model 3.1
  mseRL_LTMpipe.temp <- rbind(mseRL_LTMpipe.temp, 
-                             apply(RL_LTMpipe.sim.dat, 1, function(x,y) MSE(x, sdat.mod[s, ])))
+                             apply(RL_LTMpipe.sim.dat[, 1:48], 1, function(x,y) MSE(x, sdat.mod[s, ])))
  # model 3.2
 mseRL_LTMstr.temp  <- rbind(mseRL_LTMstr.temp, 
-                            apply(RL_LTMstr.sim.dat, 1, function(x,y) MSE(x, sdat.mod[s, ])))
+                            apply(RL_LTMstr.sim.dat[, 1:48], 1, function(x,y) MSE(x, sdat.mod[s, ])))
   
 }
 
@@ -408,7 +388,8 @@ model.fits %>%
   ggtitle('Root mean squared error')+
   xlab('model')+
   theme_bw(base_size = 20,base_family = 'Calibri') +
-  theme(legend.position='none') 
+  theme(legend.position='none') +
+   scale_colour_brewer( palette = "Set1") 
 
 ```
 
@@ -643,6 +624,58 @@ testlen<-runif(10,0,10)
  #testpos<-seq(0,1.98*pi,length=100)
  #adial.plot(testlen,testpos,rp.type="p",main="Test Polygon",line.col="blue",
   #labels=LETTERS[1:8])
+```
+
+```{r parking}
+
+  yolo = LTM.sim.dat %>% 
+   .[,-c("alpha", "egs")] %>% 
+   melt.data.table(id.vars = c("ans", "bll", "imag", "time"), 
+                   variable.name = "condition")  
+  
+ 
+ 
+ 
+ 
+ 
+ yolo = LTM.sim.dat %>% 
+   data.frame() %>% 
+   data.table() %>% 
+   .[,-c("alpha", "egs")] %>% 
+   melt.data.table(id.vars = c("ans", "bll", "imag", "time"), 
+                   variable.name = "teddy")  
+  
+ 
+ 
+ 
+ 
+  # .[order(alpha, bll, imag)]
+   .[,`:=`(nu_var = str_trunc(variable, 2,"right", ellipsis = "") %>%
+             as.integer(), 
+           nu__cat = str_trunc(variable, 9,"left", ellipsis = ""))] %>% print()
+ 
+yolo %>% 
+ .[,.(avg = mean(value)), by = .(ans, bll, imag, variable)]
+
+yolo %>% 
+ .[,`:=`(avg = mean(value)), by = .(ans, teddy)]
+
+yolo %>% 
+  ggplot() + 
+  geom_point(aes(time, value, color=teddy)) + 
+  facet_grid(teddy+ans~imag+bll)
+  yolo %>% .[order()]
+
+ yolo %>% 
+   .[imag == 1] %>% 
+   .[ans == "0.2"] %>% 
+   .[bll == "0.4"] %>% 
+   .[teddy == "set3_learn"]
+
+ 
+ #TODO
+
+
 ```
 
 
